# monorepo

./: .gitignore  .pre-commit-config.yaml  .tool-versions  Makefile  README.md
.github/: CODEOWNERS
golang/services/template/: .air.toml  .dockerignore  Dockerfile  RAEDME.md  compose.yaml  go.mod  go.sum
golang/services/template/cmd/: main.go
golang/services/template/cmd/grpcclient/: main.go
golang/services/template/cmd/grpcserver/: main.go
golang/services/template/config/: config.go
golang/services/template/infrastructures/: mysql.go
golang/services/template/interfaces/: grpc_sample.go  interceptors.go  ping.go
golang/services/template/interfaces/grpc/: ping.pb.go  ping_grpc.pb.go  sample.pb.go  sample_grpc.pb.go
golang/services/template/schema/grpc/: ping.proto  sample.proto
golang/services/template/scripts/: wait-for-it.sh
python/: Makefile
python/projects/bitwarden-helper/: .envrc.sample  pyproject.toml
python/projects/bitwarden-helper/src/: __main__.py
python/projects/slack-apps/: .envrc.sample  pyproject.toml
python/projects/slack-apps/src/: __main__.py
